finish deflate (static huffman)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,17 +18,17 @@ if (SZ_USE_REVERSEBIT_TABLE)
 	add_executable(gt_reversebits "")
 	target_sources(gt_reversebits 
 		PRIVATE 
-		"${CMAKE_CURRENT_SOURCE_DIR}/util/gt_reversebits.cpp"
-		"${CMAKE_CURRENT_SOURCE_DIR}/util/bit_util.hpp"
+		"${CMAKE_SOURCE_DIR}/util/gt_reversebits.cpp"
+		"${CMAKE_SOURCE_DIR}/util/bit_util.hpp"
 	)
 	target_include_directories(gt_reversebits
 		PRIVATE
-		"${CMAKE_CURRENT_SOURCE_DIR}"
+		"${CMAKE_SOURCE_DIR}"
 		PUBLIC
-		"${CMAKE_CURRENT_SOURCE_DIR}/include"
+		"${CMAKE_SOURCE_DIR}/include"
 	)
 	target_compile_definitions(gt_reversebits PRIVATE "SZ_USE_REVERSEBIT_TABLE")
-	set(TABLE_REVERSEBITS "${CMAKE_CURRENT_BINARY_DIR}/include/util/table_reversebits.hpp")
+	set(TABLE_REVERSEBITS "${CMAKE_BINARY_DIR}/include/util/table_reversebits.hpp")
 	add_custom_command(
 		OUTPUT ${TABLE_REVERSEBITS}
 		COMMAND gt_reversebits ${TABLE_REVERSEBITS}
@@ -37,8 +37,8 @@ if (SZ_USE_REVERSEBIT_TABLE)
 endif()
 # deflate tables
 add_executable(gt_deflate "")
-target_sources(gt_deflate PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/compress/gt_deflate.cpp")
-set(TABLE_DEFLATE "${CMAKE_CURRENT_BINARY_DIR}/include/compress/table_deflate.hpp")
+target_sources(gt_deflate PRIVATE "${CMAKE_SOURCE_DIR}/compress/gt_deflate.cpp")
+set(TABLE_DEFLATE "${CMAKE_BINARY_DIR}/include/compress/table_deflate.hpp")
 add_custom_command(
 	OUTPUT ${TABLE_DEFLATE}
 	COMMAND gt_deflate ${TABLE_DEFLATE}
@@ -47,21 +47,22 @@ add_custom_command(
 
 # Library build
 add_library(sz "")
-set(SZ_PUBLIC_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/sz")
+set(SZ_PUBLIC_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include/sz")
 target_sources(sz
 	PRIVATE
-	"${CMAKE_CURRENT_SOURCE_DIR}/crc/crc32.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/crc/crc32.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/util/bit_util.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/util/bit_util.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/util/byte_util.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/wrapper/constants.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/wrapper/file_entry.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/wrapper/version.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/wrapper/zipper.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/compress/algo_store.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/compress/algo_deflate.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/compress/deflate.cpp"
+	"${CMAKE_SOURCE_DIR}/crc/crc32.hpp"
+	"${CMAKE_SOURCE_DIR}/crc/crc32.cpp"
+	"${CMAKE_SOURCE_DIR}/util/bit_util.hpp"
+	"${CMAKE_SOURCE_DIR}/util/bit_util.cpp"
+	"${CMAKE_SOURCE_DIR}/util/byte_util.hpp"
+	"${CMAKE_SOURCE_DIR}/util/progress_bar.hpp"
+	"${CMAKE_SOURCE_DIR}/wrapper/constants.hpp"
+	"${CMAKE_SOURCE_DIR}/wrapper/file_entry.cpp"
+	"${CMAKE_SOURCE_DIR}/wrapper/version.hpp"
+	"${CMAKE_SOURCE_DIR}/wrapper/zipper.cpp"
+	"${CMAKE_SOURCE_DIR}/compress/algo_store.hpp"
+	"${CMAKE_SOURCE_DIR}/compress/algo_deflate.hpp"
+	"${CMAKE_SOURCE_DIR}/compress/deflate.cpp"
 
 	${TABLE_DEFLATE}
 	
@@ -83,10 +84,10 @@ endif()
 
 target_include_directories(sz
 	PRIVATE
-	"${CMAKE_CURRENT_SOURCE_DIR}"
-	"${CMAKE_CURRENT_BINARY_DIR}/include"
+	"${CMAKE_SOURCE_DIR}"
+	"${CMAKE_BINARY_DIR}/include"
 	PUBLIC
-	"${CMAKE_CURRENT_SOURCE_DIR}/include"
+	"${CMAKE_SOURCE_DIR}/include"
 )
 if (SZ_ENABLE_FREAD_FWRITE)
 	target_compile_definitions(sz PRIVATE "SZ_IO_USE_FREAD_FWRITE")
@@ -116,12 +117,13 @@ if (SZ_BUILD_TEST)
 		PRIVATE
 		"tests/test_entry.cpp"
 		"tests/bitflow_test.cpp"
+		"tests/deflate_test.cpp"
 	)
 	target_link_libraries(sz_tests sz gtest gtest_main)
 	target_include_directories(sz_tests 
 		PUBLIC 
-		"${CMAKE_CURRENT_SOURCE_DIR}"
-		"${CMAKE_CURRENT_SOURCE_DIR}/include"
+		"${CMAKE_SOURCE_DIR}"
+		"${CMAKE_SOURCE_DIR}/include"
 	)
 	add_test(NAME "sz_tests" COMMAND "sz_tests")
 endif()
