optimize the code structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,74 @@
 cmake_minimum_required(VERSION 3.10)
 
-# Project configuration
+
+# Project
 project(simplezip VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
+
 
 # Options
 option(SZ_ENABLE_FREAD_FWRITE "Use fread/fwrite when reading/writing file.")
 option(SZ_USE_REVERSEBIT_TABLE "Use reverse bit table.")
 option(SZ_BUILD_APP "Build application.")
 option(SZ_BUILD_TEST "Build tests.")
+
+set(SZ_BUILD_APP ON CACHE BOOL "" FORCE)
+
+
+# Source files
+set(SZ_PUBLIC_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include/sz")
+
+set(SZ_LIBSRC_INCLUDE
+	"${SZ_PUBLIC_INCLUDE_DIR}/file_entry.hpp"
+	"${SZ_PUBLIC_INCLUDE_DIR}/log.hpp"
+	"${SZ_PUBLIC_INCLUDE_DIR}/sz.hpp"
+	"${SZ_PUBLIC_INCLUDE_DIR}/types.hpp"
+	"${SZ_PUBLIC_INCLUDE_DIR}/zipper.hpp"
+)
+
+set(SZ_LIBSRC_CRC
+	"${CMAKE_SOURCE_DIR}/crc/crc32.hpp"
+	"${CMAKE_SOURCE_DIR}/crc/crc32.cpp"
+)
+set(SZ_LIBSRC_UTIL
+	"${CMAKE_SOURCE_DIR}/util/bit_util.hpp"
+	"${CMAKE_SOURCE_DIR}/util/bit_util.cpp"
+	"${CMAKE_SOURCE_DIR}/util/byte_util.hpp"
+	"${CMAKE_SOURCE_DIR}/util/fs.hpp"
+	"${CMAKE_SOURCE_DIR}/util/progress_bar.hpp"
+)
+set(SZ_LIBSRC_WRAPPER
+	"${CMAKE_SOURCE_DIR}/wrapper/constants.hpp"
+	"${CMAKE_SOURCE_DIR}/wrapper/file_entry.cpp"
+	"${CMAKE_SOURCE_DIR}/wrapper/version.hpp"
+	"${CMAKE_SOURCE_DIR}/wrapper/zipper.cpp"
+)
+set(SZ_LIBSRC_COMPRESS
+	"${CMAKE_SOURCE_DIR}/compress/compressor.hpp"
+	"${CMAKE_SOURCE_DIR}/compress/cps_store.hpp"
+	"${CMAKE_SOURCE_DIR}/compress/cps_deflate.hpp"
+	"${CMAKE_SOURCE_DIR}/compress/cps_deflate.cpp"
+)
+
+set(SZ_TABLE_DEFLATE "${CMAKE_BINARY_DIR}/include/compress/table_deflate.hpp")
+set(SZ_LIBSRC_TABLE
+	${SZ_TABLE_DEFLATE}
+)
+if (SZ_USE_REVERSEBIT_TABLE)
+	set(SZ_TABLE_REVERSEBITS "${CMAKE_BINARY_DIR}/include/util/table_reversebits.hpp")
+	set(SZ_LIBSRC_TABLE
+		${SZ_LIBSRC_TABLE}
+		${SZ_TABLE_REVERSEBITS}
+	)
+endif()
+
+source_group(include FILES ${SZ_LIBSRC_INCLUDE})
+source_group(crc FILES ${SZ_LIBSRC_CRC})
+source_group(util FILES ${SZ_LIBSRC_UTIL})
+source_group(wrapper FILES ${SZ_LIBSRC_WRAPPER})
+source_group(compress FILES ${SZ_LIBSRC_COMPRESS})
+source_group(table FILES ${SZ_LIBSRC_TABLE})
+
 
 # Generate tables
 # reverse bits table
@@ -26,60 +86,33 @@ if (SZ_USE_REVERSEBIT_TABLE)
 		"${CMAKE_SOURCE_DIR}/include"
 	)
 	target_compile_definitions(gt_reversebits PRIVATE "SZ_USE_REVERSEBIT_TABLE")
-	set(TABLE_REVERSEBITS "${CMAKE_BINARY_DIR}/include/util/table_reversebits.hpp")
 	add_custom_command(
-		OUTPUT ${TABLE_REVERSEBITS}
-		COMMAND gt_reversebits ${TABLE_REVERSEBITS}
+		OUTPUT ${SZ_TABLE_REVERSEBITS}
+		COMMAND gt_reversebits ${SZ_TABLE_REVERSEBITS}
 		DEPENDS gt_reversebits
 	)
 endif()
 # deflate tables
 add_executable(gt_deflate "")
 target_sources(gt_deflate PRIVATE "${CMAKE_SOURCE_DIR}/compress/gt_deflate.cpp")
-set(TABLE_DEFLATE "${CMAKE_BINARY_DIR}/include/compress/table_deflate.hpp")
 add_custom_command(
-	OUTPUT ${TABLE_DEFLATE}
-	COMMAND gt_deflate ${TABLE_DEFLATE}
+	OUTPUT ${SZ_TABLE_DEFLATE}
+	COMMAND gt_deflate ${SZ_TABLE_DEFLATE}
 	DEPENDS gt_deflate
 )
 
-# Library build
+
+# Library
 add_library(sz "")
-set(SZ_PUBLIC_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include/sz")
 target_sources(sz
 	PRIVATE
-	"${CMAKE_SOURCE_DIR}/crc/crc32.hpp"
-	"${CMAKE_SOURCE_DIR}/crc/crc32.cpp"
-	"${CMAKE_SOURCE_DIR}/util/bit_util.hpp"
-	"${CMAKE_SOURCE_DIR}/util/bit_util.cpp"
-	"${CMAKE_SOURCE_DIR}/util/byte_util.hpp"
-	"${CMAKE_SOURCE_DIR}/util/progress_bar.hpp"
-	"${CMAKE_SOURCE_DIR}/wrapper/constants.hpp"
-	"${CMAKE_SOURCE_DIR}/wrapper/file_entry.cpp"
-	"${CMAKE_SOURCE_DIR}/wrapper/version.hpp"
-	"${CMAKE_SOURCE_DIR}/wrapper/zipper.cpp"
-	"${CMAKE_SOURCE_DIR}/compress/cps_store.hpp"
-	"${CMAKE_SOURCE_DIR}/compress/cps_deflate.hpp"
-	"${CMAKE_SOURCE_DIR}/compress/cps_deflate.cpp"
-
-	${TABLE_DEFLATE}
-	
-	"${SZ_PUBLIC_INCLUDE_DIR}/compressor.hpp"
-	"${SZ_PUBLIC_INCLUDE_DIR}/fs.hpp"
-	"${SZ_PUBLIC_INCLUDE_DIR}/file_entry.hpp"
-	"${SZ_PUBLIC_INCLUDE_DIR}/log.hpp"
-	"${SZ_PUBLIC_INCLUDE_DIR}/sz.hpp"
-	"${SZ_PUBLIC_INCLUDE_DIR}/types.hpp"
-	"${SZ_PUBLIC_INCLUDE_DIR}/zipper.hpp"
+	${SZ_LIBSRC_INCLUDE}
+	${SZ_LIBSRC_CRC}
+	${SZ_LIBSRC_UTIL}
+	${SZ_LIBSRC_WRAPPER}
+	${SZ_LIBSRC_COMPRESS}
+	${SZ_LIBSRC_TABLE}
 )
-
-if (SZ_USE_REVERSEBIT_TABLE)
-	target_sources(sz
-		PRIVATE
-		${TABLE_REVERSEBITS}
-	)
-endif()
-
 target_include_directories(sz
 	PRIVATE
 	"${CMAKE_SOURCE_DIR}"
@@ -87,15 +120,16 @@ target_include_directories(sz
 	PUBLIC
 	"${CMAKE_SOURCE_DIR}/include"
 )
+
 if (SZ_ENABLE_FREAD_FWRITE)
 	target_compile_definitions(sz PRIVATE "SZ_IO_USE_FREAD_FWRITE")
 endif()
-
 if (SZ_USE_REVERSEBIT_TABLE)
 	target_compile_definitions(sz PRIVATE "SZ_USE_REVERSEBIT_TABLE")
 endif()
 
-# Application build
+
+# Application
 if (SZ_BUILD_APP)
 	include(FetchContent)
 	FetchContent_Declare(
@@ -114,11 +148,12 @@ if (SZ_BUILD_APP)
 	)
 endif()
 
+
 # Tests
 if (SZ_BUILD_TEST)
 	enable_testing()
 
-	# Third party build
+	# googletest
 	add_subdirectory(third_party/googletest)
 	set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
@@ -139,6 +174,7 @@ if (SZ_BUILD_TEST)
 	)
 	add_test(NAME "sz_tests" COMMAND "sz_tests")
 endif()
+
 
 # Install
 install(
